--- a/styles/form.scss
+++ b/styles/form.scss
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;  
 
-  background-color: #20a9ae;
+  background-color: #20a9ae !important;
 
   &__content {
     margin-bottom: 10px;
